--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+:root{
+  --theme-color-text : #00b5cc;
+  --theme-color-border : #00353e;
+  --theme-color-shadow : #b2df28;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +11,15 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: white;
+  background-color: rgb(5, 7, 22);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+a {
+  color : var(--theme-color-text);
+  font-size: 14px;
+}
+
+.pointer {
+  cursor: pointer;
 }
